Fix search image alignment
Set vertical-align of the image element in the search button to
middle.  Also changed the letter-spacing on the name toggle for
some reason.

--- a/denvercode/full/style.css
+++ b/denvercode/full/style.css
@@ -153,6 +153,7 @@
 #search-initial-lexical > img {
   height: 20px;
   width: 20px;
+  vertical-align: middle;
 }
 
 #search-initial-dropdown {
@@ -227,6 +228,7 @@
   color: #f5faf2;
   font-size: 8pt;
   line-height: 30px;
+  letter-spacing: .001em;
   width: 50%;
   float: left;
 }
